Implementación del modulo clientes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </button>
 
         <a href="#" class="w3-bar-item w3-button">Projects</a>
-        <a href="#" class="w3-bar-item w3-button">Clients</a>
+        <a href="./src/clientModule/views/client.html" class="w3-bar-item w3-button" id="clientModule">Clients</a>
         <a href="#" class="w3-bar-item w3-button">Sofkianos</a>
         <a href="#" class="w3-bar-item w3-button">Abut us</a>
 
@@ -59,6 +59,8 @@
             document.getElementById("openNav").style.display = "inline-block";
         }
     </script>
+
+    <script src="./dist/bundle.js"></script>
 
 </body>
 
