iniciación de crud cliente

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         </div>
     </div>
 
+    <div class="row" id="client">
+
+    </div>
+
     <script>
         function w3_open() {
             document.getElementById("main").style.marginLeft = "25%";
