se agrega la capacidad de busqueda, al codigo que enviare a integracion

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
               </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Escribe Aqui el nombre"id="nombreSofkianoBuscado" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" id="sofkianoEspecificoBoton" type="button">Buscar Sofkiano</button>
+            <input class="form-control mr-sm-2" type="search" placeholder="Escribe Aqui el nombre" id="nombreSofkianoBuscado" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" id="buscarSofkianBoton" type="button">Buscar Sofkiano</button>
           </form>
         </div>
       </nav>
