--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         </div>
     </div>
 
-    <div id="cards-content" class="row">
+    <div id="options" class="col-md-12 mb-5 ml-1">
+        
+    </div>
+    <div id="cards-content" class="row ml-4" style="padding-left: 10px">
 
     </div>
 
