--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <body>
 
-    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end" id="mySidebar">
+    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" 
+        style="display:none; align-self: flex-end" id="mySidebar">
 
         <button class="w3-bar-item w3-button w3-large" id="button-closeSideBar" style="text-align: right">
             &times;
@@ -54,8 +55,10 @@
         </div>
     </div>
 
-    <div id="cards-content" class="row">
+    <div style="margin-left: 10%" >
+        <div id="cards-content" class="row">
 
+        </div>
     </div>
 
     <script src="./dist/bundle.js"></script>
