--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body>
 
-    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" 
-        style="display:none; align-self: flex-end" id="mySidebar">
+    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end" id="mySidebar">
 
         <button class="w3-bar-item w3-button w3-large" id="button-closeSideBar" style="text-align: right">
             &times;
@@ -55,12 +54,11 @@
         </div>
     </div>
 
-    <div id="options" class="col-md-12 mb-5 ml-1">
-        
+    <div id="options" class="col-md-12 mb-5 ml-1" style="display: none">
+
     </div>
     <div id="cards-content" class="row ml-4" style="padding-left: 10px">
-
-        </div>
+    </div>
     </div>
 
     <script src="./dist/bundle.js"></script>
