--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="form-group" style="display: block">
 
             <div class="search-box" style="color: white">
-                <input type="text" name="" class="search-txt" placeholder="search..." />
+                <input type="text" name="" class="search-txt" id="searchButton" placeholder="search..." />
                 <a class="search-btn">
                     <i class="fas fa-search"></i>
                 </a>
