--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    <div id="options" class="col-md-12 mb-5 ml-1" style="display: none">
+    <div id="options" class="col-md-12 mb-5 ml-1">
 
     </div>
     <div id="cards-content" class="row ml-4" style="padding-left: 10px">
