Fix project view

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="form-group" style="display: block">
-            <div class="search-box" style="color: white">
+            <div class="search-box" style="color: white" id = "search-box">
                 <input type="text" name="" class="search-txt" id="searchButton" placeholder="search..." />
                 <a class="search-btn">
                     <i class="fas fa-search"></i>
@@ -52,13 +52,21 @@
             </div>
         </div>
     </div>
-
+    
     <div id="options" class="col-md-12 mb-5 ml-1">
 
     </div>
     <div id="cards-content" class="row ml-4" style="padding-left: 10px">
-        
+
     </div>
+    </div>
+
+    <div style="margin: 1%; padding: 1%">
+        <footer class="page-footer font-small teal pt-4">
+            <div class="container-fluid text-center text-md-left">
+                <div class="footer-copyright text-center py-3">© 2018 Copyright: Sofka Tecnologies
+                </div>
+        </footer>
     </div>
 
     <script src="./dist/bundle.js"></script>
