--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                         </label>
                     </form>
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer" id="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success" id="create-project" data-dismiss="modal">Crear</button>
+                    
                 </div>
             </div>
 
