--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div>
 
         <div class="form-group" style="display: block">
-            <div class="search-box" style="color: white" id = "search-box">
-                <input type="text" name="" class="search-txt" id="searchButton" placeholder="search..." />
-                <a class="search-btn">
+            <div class="search-box" style="color: white" id="search-box">
+                <input type="text" class="search-txt" id="searchButton" placeholder="Buscar . . ."/>
+                <a class="search-btn" id="search-icon">
                     <i class="fas fa-search"></i>
                 </a>
 
             </div>
         </div>
     </div>
-    
+
     <div id="options" class="col-md-12 mb-5 ml-1">
 
     </div>
@@ -61,8 +61,8 @@
 
     </div>
     </div>
-    
-   
+
+
 
     <div style="margin: 1%; padding: 1%">
         <footer class="page-footer font-small teal pt-4">
