--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div id="options" class="col-md-12 mb-5 ml-1">
 
     </div>
-    <div id="cards-content" class="row">
+    <div id="cards-content">
 
     </div>
     </div>
@@ -67,7 +67,7 @@
     <div style="margin: 1%; padding: 1%">
         <footer class="page-footer font-small teal pt-4">
             <div class="container-fluid text-center text-md-left">
-                <div class="footer-copyright text-center py-3">© 2018 Copyright: Sofka Tecnologies
+                <div class="footer-copyright text-center py-3">© 2019 Copyright: Sofka Technologies
                 </div>
         </footer>
     </div>
