add new project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./searchBar/searchBar.css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./addNewProject/addNewProjec.css">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sofkatalogo</title>
@@ -17,7 +18,8 @@
 
 <body>
 
-    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end" id="mySidebar">
+    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" 
+        style="display:none; align-self: flex-end" id="mySidebar">
 
         <button class="w3-bar-item w3-button w3-large" id="button-closeSideBar" style="text-align: right">
             &times;
@@ -61,7 +63,6 @@
 
     </div>
     </div>
-
 
 
     <div style="margin: 1%; padding: 1%">
