--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" 
-        style="display:none; align-self: flex-end" id="mySidebar">
+        style="display:none; align-self: flex-end; margin-top: -15%" id="mySidebar">
 
         <button class="w3-bar-item w3-button w3-large" id="button-closeSideBar" style="text-align: right">
             &times;
@@ -38,7 +38,7 @@
 
     </div>
 
-    <div id="main" style="background-color: #FF7521">
+    <div id="main" class="headerBar">
         <div>
             <button id="button-openSideBar" class="w3-button w3-xlarge">&#9776;</button>
             <h1 class="display-1" style="padding-left: 5%; padding-bottom: 2%; font-weight: 400" id="controllerName">
@@ -49,17 +49,17 @@
             <div class="search-box" style="color: white" id="search-box">
                 <input type="text" class="search-txt" id="searchButton" placeholder="Buscar . . ."/>
                 <a class="search-btn" id="search-icon">
-                    <i class="fas fa-search"></i>
+                    <i class="fas fa-search search-icon"></i>
                 </a>
 
             </div>
         </div>
     </div>
 
-    <div id="options" class="col-md-12 mb-5 ml-1">
+    <div id="options" class="col-md-12 mb-5 ml-1" style="margin-top: 250px">
 
     </div>
-    <div id="cards-content">
+    <div id="cards-content" >
 
     </div>
     </div>
