--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             margin: 0;
             padding: 0;
             overflow: hidden">
-            <li class="w3-bar-item w3-button" id="btnHome"> Home</li>
-            <li class="w3-bar-item w3-button" id="btnProject">Projects</li>
-            <li class="w3-bar-item w3-button" id="btnClients">Clients</li>
-            <li class="w3-bar-item w3-button" id="btnSofkianos">Sofkian People</li>
-            <li class="w3-bar-item w3-button" id="btnAboutUs">About Us</li>
+            <li class="w3-bar-item w3-button" id="btnHome"> Principal</li>
+            <li class="w3-bar-item w3-button" id="btnProject">Proyectos</li>
+            <li class="w3-bar-item w3-button" id="btnClients">Clientes</li>
+            <li class="w3-bar-item w3-button" id="btnSofkianos">Sofkianos</li>
+            <li class="w3-bar-item w3-button" id="btnAboutUs">Conócenos</li>
         </ul>
 
     </div>
