fix modal creation

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
 
-    <div style="margin: 1%; padding: 1%">
+    <div style="margin: 1%; padding: 1%" id="footerModal">
         <footer class="page-footer font-small teal pt-4">
             <div class="container-fluid text-center text-md-left">
                 <div class="footer-copyright text-center py-3">© 2019 Copyright: Sofka Technologies
