--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <body>
 
-    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end; margin-top: -15%"
+    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none; align-self: flex-end; margin-top: -15%; position: fixed !important; top:200px;"
         id="mySidebar">
 
-        <button class="w3-bar-item w3-button w3-large" id="button-closeSideBar" style="text-align: right">
+        <button class="w3-bar-item w3-button w3-large" id="button-closeSideBar" style="text-align: right; ">
             &times;
         </button>
         <ul style="
